Fixing dark mode

--- a/assets/styles/themes/dark.scss
+++ b/assets/styles/themes/dark.scss
@@ -1,4 +1,4 @@
-[data-theme="dark"], .theme-dark {
+[data-theme="dark"] {
     --light-l: 0%; 
 
     .is-moon {
