--- a/assets/styles/themes/light.scss
+++ b/assets/styles/themes/light.scss
@@ -1,7 +1,5 @@
-[data-theme="light"], .theme-light {
-    :root {
-        --light-l: 94% !important;
-    }
+[data-theme="light"] {
+    --light-l: 94% !important;
 
     .is-sun {
       display: none !important;
